快好了，快好了

--- a/app.json
+++ b/app.json
@@ -7,8 +7,8 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#31c27c",
-    "navigationBarTitleText": "My Music",
+    "navigationBarBackgroundColor": "#f05044",
+    "navigationBarTitleText": "小柴音乐",
     "navigationBarTextStyle": "#fff"
   }
 }
